@@ -38,54 +38,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|search
-operator|.
-name|payloads
-operator|.
-name|AveragePayloadFunction
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|payloads
-operator|.
-name|PayloadTermQuery
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|spans
-operator|.
-name|SpanQuery
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|queryparser
 operator|.
 name|xml
@@ -114,6 +66,70 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|payloads
+operator|.
+name|AveragePayloadFunction
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|payloads
+operator|.
+name|PayloadScoreQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+operator|.
+name|SpanQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|spans
+operator|.
+name|SpanTermQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|w3c
 operator|.
 name|dom
@@ -127,7 +143,7 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 
 begin_comment
-comment|/**  * Builder for {@link PayloadTermQuery}  */
+comment|/**  * Builder for {@link PayloadScoreQuery}  */
 end_comment
 
 begin_class
@@ -173,11 +189,14 @@ argument_list|(
 name|e
 argument_list|)
 decl_stmt|;
-name|PayloadTermQuery
+name|PayloadScoreQuery
 name|btq
 init|=
 operator|new
-name|PayloadTermQuery
+name|PayloadScoreQuery
+argument_list|(
+operator|new
+name|SpanTermQuery
 argument_list|(
 operator|new
 name|Term
@@ -185,6 +204,7 @@ argument_list|(
 name|fieldName
 argument_list|,
 name|value
+argument_list|)
 argument_list|)
 argument_list|,
 operator|new
